cluster/homelab/helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: homepage
    namespace: homepage
    annotations:
        kubernetes.io/ingress.class: ENC[AES256_GCM,data:yAcyZok=,iv:PjWNYB5EJv3H09zMu3AH4cJUs2xp127aPaz18/rnC8E=,tag:EBMpHwOxv779Zo/lz38fRw==,type:str]
        gethomepage.dev/enabled: ENC[AES256_GCM,data:ovykkA==,iv:m9+lFnAsRj5mdE3D8YFi+KVG+IqxiPHIvzMZmM67wTY=,tag:rq5tcGCdfY1j/DkmTp6oNA==,type:str]
        gethomepage.dev/description: ENC[AES256_GCM,data:O2De6w==,iv:CJPVB5HBZGdUaWlqz6pI75tizfbc3SBSHBmJW2DrU3c=,tag:n12DPDgG0qpwHL193HLYDw==,type:str]
        gethomepage.dev/group: ENC[AES256_GCM,data:wDW5pA==,iv:v3akBL0D4qncMGjOu+lJBV25A6p3rdupR3eQk/rYTFY=,tag:2+/bmgEHvZBdqsvJyjtDmQ==,type:str]
        gethomepage.dev/name: ENC[AES256_GCM,data:Rp1xzz2gK5o=,iv:l7a4848QQo3Ov5yCCEZh9YlhWH32Eo6R/6BXIsLWFgo=,tag:1WQaW7MZMDLPgFwr0beEzg==,type:str]
spec:
    tls:
        - hosts:
            - '*.stefangenov.site'
          secretName: ingress
    rules:
        - host: homepage-test.stefangenov.site
          http:
            paths:
                - pathType: Prefix
                  path: /
                  backend:
                    service:
                        name: homepage
                        port:
                            number: 3000
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1mq6usjzvvxvcp7tl03yjdqd0kgjhhvhz48kmg86p43nhx0jc75jssw0kfn
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXeFpTbEFkUS82bnFPKzFn
[...]
            FHoQSyLYsyB5kRRgknrL+eCxP3ECHqq3yfHKYh+qSSHW1llTPhu+7A==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-03-17T06:31:45Z"
    mac: ENC[AES256_GCM,data:omoXB3sBaBTu+PStoBRy6Kjusab7HY+RWvFoCtag7ZwWiTSfwHXtxJhFzxQeiLQeh1JTcfG2q6gvGREG49zy5JXaiX3lFe+AEwTEIcRUsMkM1oNmAutVzU6NPRGqTYhg7RkEdgbeHODuQIYNzl0fL5xk7ptpC8fEyauJLuFxh2c=,iv:MrDtJpN5XWBPtlxAKX7kMOF4Mutm68lqdq/p1NMHGpk=,tag:4KvDgi80dZSxDwwI6Q/oHw==,type:str]
    pgp: []
    encrypted_regex: ^(annotations)$
    version: 3.7.3
